# BluePresence

./: Cargo.toml  README.md  build.rs
src/: config.rs  main.rs  monitor.rs  ui.rs
